Tue Jul 18 10:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1639_Regression/struct_client.cpp:
        * tests/DynAny_Test/test_dynany.h:
          Fixed compile errors with gcc4

Tue Jul 18 10:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_UDP_Out_Endpoint.cpp:
          Use true/false

        * orbsvcs/orbsvcs/SSLIOP/ssl_endpoints.pidl:
          Updated comments

Tue Jul 18 09:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
          Const improvement

Tue Jul 18 09:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/HTIOP.mpc:
          Enabled regeneration of the pidl file

        * orbsvcs/orbsvcs/HTIOP/htiop_endpoints.pidl:
          Updated comments

        * orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.{h,cpp}:
          Removed from the repo

Tue Jul 18 09:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/QtTests/server.cpp:
        * tests/FL_Cube/client.cpp:
          Fixed include paths because resource factories got moved

Tue Jul 18 08:15:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Storable.h:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:

          Fix bugzilla 2600 - Naming Service Flat File Persistance with
          Federated naming contexts.

Mon Jul 17 18:35:32 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * docs/tutorials/Quoter/RTCORBA/Admin.cpp
        * docs/tutorials/Quoter/RTCORBA/Broker.cpp
        * docs/tutorials/Quoter/RTCORBA/Broker_i.cpp
        * docs/tutorials/Quoter/RTCORBA/Broker_i.h
        * docs/tutorials/Quoter/RTCORBA/Common_i.cpp
        * docs/tutorials/Quoter/RTCORBA/Common_i.h
        * docs/tutorials/Quoter/RTCORBA/Distributor.cpp
        * docs/tutorials/Quoter/RTCORBA/Distributor_i.cpp
        * docs/tutorials/Quoter/RTCORBA/Distributor_i.h