@@ -1,0 +1,19 @@
+// -*- MPC -*-
+// $Id$
+
+project(*Server): taoserver {
+  idlflags += -Sa -St
+  Source_Files {
+    Hello.cpp
+    server.cpp
+  }
+}
+
+project(*Client): taoclient {
+  after += *Server
+  Source_Files {
+    TestC.cpp
+    client.cpp
+  }
+}
+
